2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* AssemblyInfo.cs: bump to 0.2

	* Layer.cs: internalize public methods nobody cares about

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* Point.cs:
	* Rectangle.cs:
	* Web/TileProvider.cs:
	* Drawing/MapDrawer.cs:
	* Data/Shapefile/Shapefile.cs:
	* Data/KeyholeMarkupLanguage.cs:
	* Projection/ProjFourWrapper.cs:
	* Data/Shapefile/DBaseIIIFile.cs:
	* Xml/Serialization/MapSerializer.cs:
	* Drawing/MapConfigurationException.cs:
	* Projection/SphericalMercatorProjector.cs: gendarme fixes

2008-12-08  Scott Ellington  <scott.ellington@gmail.com>

	* Web/TileProvider.cs:
	* Drawing/MapDrawer.cs: add TileProvider.BleedInPixels

2008-12-08  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add Style.LabelCustomFont

2008-12-08  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Layer.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add minscale/maxscale for
	layer,style, and labels

2008-12-08  Scott Ellington  <scott.ellington@gmail.com>

	* Layer.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add layer.Visible

2008-12-05  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs: add a polyline labelling algorithm

2008-12-05  Scott Ellington  <scott.ellington@gmail.com>

	* Data/Shapefile/Shapefile.cs: fix bug in overload call

	* Data/KeyholeMarkupLanguage.cs: use label field for placemark names if
	available

2008-12-05  Scott Ellington  <scott.ellington@gmail.com>

	* Map.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add Map.BackgroundColor

2008-12-05  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs: remove console write

2008-12-05  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add Style.LabelAngle
